# DEPRECATED_bunsan_worker

./: CMakeLists.txt  Doxyfile  callback.cpp  callback.hpp  config.rc  hub.rc  main.cpp  pm.rc  pool.cpp  pool.hpp  pool_interface.cpp  pool_interface.hpp  resources.rc  worker.cpp  worker.hpp  worker.py  worker_main.cpp
callbacks/: xmlrpc.cpp  xmlrpc.hpp
include/bunsan/worker/: callback.hpp  pool.hpp  pool_interface.hpp  worker.hpp
pool_interfaces/: complex_interface.cpp  complex_interface.hpp  xmlrpc.cpp  xmlrpc.hpp
pools/: zeromq.cpp  zeromq.hpp  zmq_helpers.cpp  zmq_helpers.hpp
src/: pool_main.cpp  worker.py  worker_main.cpp
src/lib/: callback.cpp  pool.cpp  pool_interface.cpp  worker.cpp
src/lib/callbacks/: xmlrpc.cpp  xmlrpc.hpp
src/lib/pool_interfaces/: complex_interface.cpp  complex_interface.hpp  xmlrpc.cpp  xmlrpc.hpp
src/lib/pools/: zeromq.cpp  zeromq.hpp
src/lib/workers/: zeromq.cpp  zeromq.hpp
workers/: zeromq.cpp  zeromq.hpp
